--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                     <span class="font-medium">Developers:</span> nan__x3, igharsha7
                                 </p>
                                 <p>
-                                    <span class="font-medium">Support:</span> Available through GitHub Issues
+                                    <span class="font-medium">Support:</span> https://forms.gle/EdtrPCE1oRUHuwXs8
                                 </p>
                             </div>
                         </div>
