--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                     <span class="font-medium">Developers:</span> nan__x3, igharsha7
                                 </p>
                                 <p>
-                                    <span class="font-medium">Support:</span> https://forms.gle/EdtrPCE1oRUHuwXs8
+                                    <span class="font-medium">Support:</span> <a href="https://forms.gle/EdtrPCE1oRUHuwXs8" target="_blank" rel="noopener noreferrer" class="text-[#558c8c] hover:text-[#4a7a7a] underline transition-colors">Contact Form</a>
                                 </p>
                             </div>
                         </div>
